Monday setting up html and less variables mixins

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
   <title>Design Your Life</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -25,7 +26,7 @@
     <header class="top-bar">
         <div class="container">
         <div class="container-left">
-            A fontAwesome Logo
+           <img src="./img/LogoDYL.jpg" alt="Design your life logo">
         </div>
         <div class="container-center">
             <span>About</span> <span>Features</span> <span>Blog</span> <span>Contact</span>            
