--- a/indexDYL.html
+++ b/indexDYL.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'> 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
   <title>Design Your Life</title>
 
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/indexDYL.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-    <!-- <script src="./components/Tabs/Tabs.js" async></script> -->
+    <!-- <script src="./components/Tabs/Tabs.js" async></script>
 
 
   <!--[if lt IE 9]>
@@ -23,6 +23,7 @@
 <body>
 
     <!-- TOP BAR COMPONENT -->
+
     <header class="top-bar">
         <div class="container">
         <div class="container-left">
@@ -31,7 +32,7 @@
         <div class="container-center">
             <span>About</span> <span>Features</span> <span>Blog</span> <span>Contact</span>            
         </div>
-        <div class="container-right"> <span>New User? Sign up</span> <span>LOG In</span>  
+        <div class="container-right"> <span>SIGN UP</span> <span>LOG IN</span>  
         </div>
     </div>
     </header>
@@ -39,14 +40,14 @@
     <!-- Top info COMPONENT -->
     <div class="top-info">
         <h1>Let’s help you design your best life</h1>
-        <h5>Your private, secure & optimally designed life</h5>
-        <h5>We guide you through it all</h5> 
+        <h5>Your private, secure & optimally designed life <br> We guide you through it all</h5>
+        
     </div>
 
     <!-- Carousel -->
     <div class="carousel">
         <div class="left-button"> < </div>
-        <img src="" alt="">
+        <!-- <img src="./img/lost.jpg" alt="woman looking up in forest"> -->
         <img src="" alt="">
         <img src="" alt="">
         <div class="right-button"> > </div>
@@ -72,7 +73,7 @@
         <!-- CARD COMPONENTS -->
         <div class="card stepI" data-tab="phaseI">
             <div class="card-content">
-                <h2>Step 1:</h2>
+                <h4>Step 1:</h4>
                 <p>Ditch the notion that you have to be perfect!</p>
             </div>
             
