Tabs component getting started deleted google fonts

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'> 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
+  
   <title>Design Your Life</title>
 
   <link rel="stylesheet" href="css/indexDYL.css">
@@ -74,7 +74,7 @@
     <!-- Tabs component -->
     <div class="tabs">
         <div class="phases">
-            <div data-tab="phaseI" class="tab">Phase 1: Accept Imperfection</div>
+            <div data-tab="phaseI" class="tab active-tab">Phase 1: Accept Imperfection</div>
             <div data-tab="phaseII" class="tab">Phase 2: Design Your Life</div>
             <div data-tab="phaseIII" class="tab">Phase 3: Sample Your Lives</div>
         </div>
