tabs component and styling added to MVP

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -13,6 +13,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
     <script src="./Components/carouselDYL.js" async></script>
+    <script src="./Components/tabsDYL.js" async></script>
+    
+    
     <!-- <script src="./components/Tabs/Tabs.js" async></script>
 
 
@@ -28,7 +31,7 @@
     <header class="top-bar">
         <div class="container">
         <div class="container-left">
-           <img src="./img/LogoDYL.jpg" alt="Design your life logo">
+           <img src="./img/LogoII_DYL.png" alt="Design your life logo">
         </div>
         <div class="container-center">
             <span>About</span> <span>Features</span> <span>Blog</span> <span>Contact</span>            
@@ -86,47 +89,51 @@
         <!-- CARD COMPONENTS -->
         <div class="card stepI" data-tab="phaseI">
             <div class="card-content">
-                <h3>Step 1:</h3>
+                <h5>Step 1:</h5>
                 <p>Ditch the notion that you have to be perfect!</p>
             </div>           
         </div>
 
         <div class="card stepII" data-tab="phaseI">
             <div class="card-content">
-                <h3>Step 2:</h3>
+                <h5>Step 2:</h5>
                 <p>Ditch dysfunctional beliefs that you must have a passion!</p>
             </div>           
         </div>
 
         <div class="card stepI" data-tab="phaseII">
             <div class="card-content">
-                <h3>Step 1: Your optimized life</h3>
+                <h5>Step 1: Your optimized life</h5>
                 <p>Start a good time journal</p>
                 <p>Do it for 3 weeks everyday</p>
-                <p>Utilize AEIOU Technique: Activities you were doing. 
-                    Environment you’re in. Who were you interacting with?
-                    What objects were you using. 
-                    What users were you working for?</p>                   
+                <p>Utilize AEIOU Technique: <ul>
+                    <li> <b>ACTIVITIES</b> you were doing?</li> 
+                    <li><b>ENVIRONMENT</b> you were in?</li>
+                    <li>Who were you <b>INTERACTING</b> with?</li>
+                    <li>What <b>OBJECTS</b> were you using?</li>
+                    <li>What <b>USERS</b> were you working for?</li>                    
+                </ul>                    
+                    </p>                   
             </div>           
         </div>
 
         <div class="card stepII" data-tab="phaseII">
                 <div class="card-content">
-                    <h3>Step 2: Sketch a 5 year plan of your alternate life</h3>
+                    <h5>Step 2: Sketch a 5 year plan of your alternate life</h5>
                     <p>Suppose your job went away due to AI taking over</p>
                     <p>What else would you do?</p>                  
                 </div>           
         </div>
         <div class="card stepIII" data-tab="phaseII">
                 <div class="card-content">
-                    <h3>Step 3:Sketch a 5 year plan of your Fascinated life</h3>
+                    <h5>Step 3:Sketch a 5 year plan of your Fascinated life</h5>
                     <p>What would you do if money, image, prestige wasn’t an issue for you?</p>                           
                 </div>           
         </div>
 
         <div class="card stepI" data-tab="phaseIII">
                 <div class="card-content">
-                    <h3>Step 1: Conduct prototype conversations</h3>
+                    <h5>Step 1: Conduct prototype conversations</h5>
                     <p>Reach out to people on linkedIn </p>  
                     <p>Find people at conferences and ask to have coffee or 15 min skype meeting to conduct informational interviews. </p>
                     <p>Listen to their stories and take notes.</p>                         
@@ -135,7 +142,7 @@
 
         <div class="card stepII" data-tab="phaseIII">
                 <div class="card-content">
-                    <h3>Step 2: Narrow down a few lives you'd like to live</h3>
+                    <h5>Step 2: Narrow down a few lives you'd like to live</h5>
                     <p>Choose a life of one person you've interviewed</p>  
                     <p>Live the life of that person for a while</p>                                           
                 </div>           
