All log in buttons hooked up to frontend portion

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -71,7 +71,7 @@
 
     <!-- Start button -->
     <div class="start-button">
-        <button>Start designing a better life for you</button> 
+        <button> <a href="https://goodtimejournal-ak.netlify.com/" target="_blank">Start designing a better life for you</a></button> 
         <h2>How It Works</h2>
     </div>
 
@@ -153,7 +153,7 @@
 
     <!-- Random Learn Objectives generator -->
     <div class="learnObjectives">
-        <button>See what you'll learn with this app! <br> Keep Clicking! </button> 
+        <button>See everything you'll learn with this app! <br> Keep Clicking! </button> 
         <p id='learnObjDisplay'></p>        
     </div>
 
