Final changes to Tuesday MVP

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -107,14 +107,15 @@
                 <h5>Step 1: Your optimized life</h5>
                 <p>Start a good time journal</p>
                 <p>Do it for 3 weeks everyday</p>
-                <p>Utilize AEIOU Technique: <ul>
+                <p>Utilize AEIOU Technique: 
+                    <ul>
                     <li> <b>ACTIVITIES</b> you were doing?</li> 
                     <li><b>ENVIRONMENT</b> you were in?</li>
                     <li>Who were you <b>INTERACTING</b> with?</li>
                     <li>What <b>OBJECTS</b> were you using?</li>
                     <li>What <b>USERS</b> were you working for?</li>                    
-                </ul>                    
-                    </p>                   
+                </ul>
+            </p>                   
             </div>           
         </div>
 
@@ -169,7 +170,7 @@
             <i class="fa fa-twitter"></i>
             <i class="fa fa-linkedin"></i>
         </div>
-        <p><a href="#" target="_blank" class="copyright">Copyright Good Time Journal Team</a></p>
+        <p><a href="#" target="_blank" class="copyright">Copyright Good Time Journal Team&#169</a></p>
 
     </footer>
 
