added an extra Features page to MVP

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -16,8 +16,7 @@
     crossorigin="anonymous"></script>
     <script src="./Components/carouselDYL.js" async></script>
     <script src="./Components/tabsDYL.js" async></script>
-       
-
+    <script src="./Components/generalDYL.js" async></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -34,7 +33,15 @@
            <img src="./img/LogoII_DYL.png" alt="Design your life logo">
         </div>
         <div class="container-center">
-            <span>About</span> <span>Features</span> <span>Blog</span> <span>Contact</span>            
+            <span>About</span> 
+            <span class="features-dropbtn">Features
+            <div id="features-dropdown" class="features-dropdown-content">
+                <a href="#">Further Reading</a>
+                <a href="#">Advice</a>
+                <a href="#">Dig Deeper</a>
+            </div> </span>
+            <span>Blog</span> 
+            <span>Contact</span>            
         </div>
         <div class="container-right"> <span> <a href="https://goodtimejournal-ak.netlify.com/" target="_blank">SIGN UP</a></span> 
             <span><a href="https://goodtimejournal-ak.netlify.com/" target="_blank">LOG IN</a></span>  
