some greensock animation to second features page

--- a/readingDYL.html
+++ b/readingDYL.html
@@ -11,8 +11,10 @@
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="css/indexDYL.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 
   <title>Design Your Life</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script> 
   <script src="./Components/generalDYL.js" async></script>
   <script src="./Components/readingDYL.js" async></script>
 </head>
@@ -42,6 +44,7 @@
       </div>
     </div>
   </header>
+
   <!-- Jumbotron -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
@@ -264,7 +267,7 @@
         UI Developer
       </div>
     </li>
-    <li class="media">
+    <li class="media my-4">
       <img src="./img/blackRose.jpg" class="mr-3" alt="...">
       <div class="media-body">
         <h5 class="mt-0 mb-1">Sem Limi</h5>
@@ -278,7 +281,7 @@
         Front End Developer
       </div>
     </li>
-    <li class="media">
+    <li class="media my-4">
       <img src="./img/developerII.jpg" class="mr-3" alt="...">
       <div class="media-body">
         <h5 class="mt-0 mb-1">Alex King</h5>
@@ -292,7 +295,7 @@
         Back End Developer
       </div>
     </li>
-    <li class="media">
+    <li class="media my-4">
       <img src="./img/mobile_developer.jpg" class="mr-3" alt="...">
       <div class="media-body">
         <h5 class="mt-0 mb-1">Frulwinn Collick</h5>
