added frontend app preview gif to main page

--- a/indexDYL.html
+++ b/indexDYL.html
@@ -168,6 +168,12 @@
         <p id='learnObjDisplay'></p>
     </div>
 
+    <!-- App preview -->
+    <div class="preview">
+        <h1>App Preview</h1>
+        <img src="./img/preview/app-preview.gif" alt="">
+    </div>
+
     <!-- Footer -->
     <footer class='contact'>
         <h5>Contact Us!</h5>
